# soft-body-demo

./: CMakeLists.txt  README.md  angular_momentum_log.txt  build.sh  momentum_log.txt  momentum_plotter.py  x86_64-linux-gcc.cmake
sample_graphs/: graf1.txt  graf2.txt  graf4.txt  graf5.txt  graf6.txt  graf7.txt
src/: arrow.cpp  arrow.hpp  background.cpp  background.hpp  button.cpp  button.hpp  color_bar.cpp  color_bar.hpp  color_generator.cpp  color_generator.hpp  fcolor.cpp  fcolor.hpp  fonts.cpp  fonts.hpp  graf.cpp  graf.hpp  graph_colorizer.cpp  graph_colorizer.hpp  graph_force_system.cpp  graph_force_system.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_force_system.cpp  mesh_force_system.hpp  nod.cpp  nod.hpp  object.hpp  scene.hpp  utilities.cpp  utilities.hpp
